# Haskell-Pipes-Extras-Library

./: .gitignore  default.nix  pipes-extras.cabal  release.nix  shell.nix
nix/: pipes-extras.nix
src/Pipes/: Extras.hs
tests/: Main.hs
